navbar and home page

--- a/index.html
+++ b/index.html
@@ -10,11 +10,15 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="style.css" />
+    <link
+      href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css"
+      rel="stylesheet"
+    />
     <title>Home</title>
   </head>
   <body>
     <header class="header">
-      <a href="#" class="name">Chris Neal</a>
+      <a href="index.html" class="name">Chris</a>
 
       <nav class="navbar">
         <a href="index.html">Home</a>
@@ -22,5 +26,22 @@
         <a href="portfolio.html">Portfolio</a>
       </nav>
     </header>
+    <section class="home">
+      <div class="home-content">
+        <h1>Hi, I'm Chris Neal</h1>
+        <h2>Software Developer</h2>
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Laudantium
+          nesciunt odit aperiam, itaque quae, labore nihil aliquam architecto
+          esse ipsam at, fuga nulla facere et! Quas praesentium qui eligendi
+          unde.
+        </p>
+      </div>
+
+      <div class="bot-links">
+        <a href="#"><i class="bx bxl-linkedin"></i></a>
+        <a href="#"><i class="bx bxl-instagram"></i></a>
+      </div>
+    </section>
   </body>
 </html>
