--- a/about.html
+++ b/about.html
@@ -14,7 +14,7 @@
   </head>
   <body>
     <header class="header">
-      <a href="#" class="name">Chris Neal</a>
+      <a href="index.html" class="name">Chris Neal</a>
 
       <nav class="navbar">
         <a href="index.html">Home</a>
