Finished the home page

--- a/index.html
+++ b/index.html
@@ -30,6 +30,8 @@
       <div class="home-content">
         <h1>Hi, I'm Chris Neal</h1>
         <h2>Software Developer</h2>
+        <p>and</p>
+        <h2>Frontend Developer</h2>
         <p>
           Lorem ipsum dolor sit amet consectetur adipisicing elit. Laudantium
           nesciunt odit aperiam, itaque quae, labore nihil aliquam architecto
@@ -37,11 +39,23 @@
           unde.
         </p>
       </div>
-
+      <div>
+        <img class="headshot" src="Image/Headshot.jpg" alt="headshot" />
+      </div>
+    </section>
+    <section>
+      <div class="quote">
+        <h2>
+          "You don't have to see the whole staircase, just take the first step."
+          - Martin Luther King Jr
+        </h2>
+      </div>
+    </section>
+    <footer>
       <div class="bot-links">
         <a href="#"><i class="bx bxl-linkedin"></i></a>
         <a href="#"><i class="bx bxl-instagram"></i></a>
       </div>
-    </section>
+    </footer>
   </body>
 </html>
