--- a/portfolio.html
+++ b/portfolio.html
@@ -10,11 +10,15 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="style.css" />
+    <link
+      href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css"
+      rel="stylesheet"
+    />
     <title>Portfolio</title>
   </head>
   <body>
     <header class="header">
-      <a href="index.html" class="name">Chris Neal</a>
+      <a href="index.html" class="name">Chris</a>
 
       <nav class="navbar">
         <a href="index.html">Home</a>
@@ -22,5 +26,11 @@
         <a href="portfolio.html">Portfolio</a>
       </nav>
     </header>
+    <footer>
+      <div class="bot-links">
+        <a href="#"><i class="bx bxl-linkedin"></i></a>
+        <a href="#"><i class="bx bxl-instagram"></i></a>
+      </div>
+    </footer>
   </body>
 </html>
