completed my about page and added features

--- a/about.html
+++ b/about.html
@@ -14,7 +14,7 @@
       href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css"
       rel="stylesheet"
     />
-    <title>About</title>
+    <title>Personal Portfolio</title>
   </head>
   <body>
     <header class="header">
@@ -26,10 +26,60 @@
         <a href="portfolio.html">Portfolio</a>
       </nav>
     </header>
+    <section class="about">
+      <div class="golf">
+        <div class="golf-info">
+          <h2>Golf</h2>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Officia
+            illo exercitationem dolores repellat doloribus. Nostrum illum minus
+            esse voluptate quibusdam fugit odio numquam placeat consequuntur, ad
+            vel molestiae ipsum accusantium.
+          </p>
+        </div>
+        <div>
+          <img src="Image/Golf.webp" alt="golf" class="golf-img" />
+        </div>
+      </div>
+      <hr />
+      <div class="sports-cards">
+        <div class="sports-cards-info">
+          <h2>Sports Cards</h2>
+          <p>
+            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ullam vero
+            rem dicta illum praesentium architecto atque, nemo at, ad nihil ex
+            quo nulla ipsa distinctio harum quas nostrum ratione perferendis.
+          </p>
+        </div>
+        <div>
+          <img
+            src="Image/sports cards.webp"
+            alt="sports cards"
+            class="sports-cards-img"
+          />
+        </div>
+      </div>
+      <hr />
+      <div class="music">
+        <div class="music-info">
+          <h2>Music Production</h2>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Expedita
+            nemo, corporis minima possimus iure delectus necessitatibus sequi
+            sunt, vero ratione qui quisquam. Voluptatum facere quas ipsa non
+            modi quasi nemo.
+          </p>
+        </div>
+        <div>
+          <img src="Image/music.jpg" alt="music" class="music-img" />
+        </div>
+      </div>
+    </section>
     <footer>
       <div class="bot-links">
         <a href="#"><i class="bx bxl-linkedin"></i></a>
         <a href="#"><i class="bx bxl-instagram"></i></a>
+        <a href="https://github.com/"><i class="bx bxl-github"></i></a>
       </div>
     </footer>
   </body>
