--- a/portfolio.html
+++ b/portfolio.html
@@ -14,7 +14,7 @@
       href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css"
       rel="stylesheet"
     />
-    <title>Portfolio</title>
+    <title>Personal Portfolio</title>
   </head>
   <body>
     <header class="header">
@@ -30,6 +30,7 @@
       <div class="bot-links">
         <a href="#"><i class="bx bxl-linkedin"></i></a>
         <a href="#"><i class="bx bxl-instagram"></i></a>
+        <a href="https://github.com/"><i class="bx bxl-github"></i></a>
       </div>
     </footer>
   </body>
