finished portfolio page

--- a/portfolio.html
+++ b/portfolio.html
@@ -26,6 +26,59 @@
         <a href="portfolio.html">Portfolio</a>
       </nav>
     </header>
+    <section class="portfolio">
+      <div class="project-1">
+        <h2>Project 1</h2>
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Asperiores
+          beatae modi ab totam veritatis excepturi quidem a magni quam. Earum
+          illum adipisci, aspernatur blanditiis eaque dicta dolorum incidunt ab
+          modi.
+        </p>
+        <div class="btn-2">
+          <button class="project-btn"><a href="#">Project 1</a></button>
+        </div>
+      </div>
+
+      <div class="project-2">
+        <h2>Project 2</h2>
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptas ea
+          ratione excepturi illo ut dolorem corporis, eveniet quis deserunt
+          iure, quidem dolores expedita praesentium obcaecati quasi? Corrupti
+          consequuntur illum cumque.
+        </p>
+        <div class="btn-2">
+          <button class="project-btn"><a href="#">Project 2</a></button>
+        </div>
+      </div>
+
+      <div class="project-3">
+        <h2>Project 3</h2>
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Commodi
+          incidunt consequatur odit ratione, deserunt aspernatur repudiandae
+          illum beatae exercitationem voluptates reprehenderit mollitia
+          inventore magnam rem in. Quasi quibusdam ipsam laboriosam!
+        </p>
+        <div class="btn-2">
+          <button class="project-btn"><a href="#">Project 3</a></button>
+        </div>
+      </div>
+
+      <div class="project-4">
+        <h2>Project 4</h2>
+        <p>
+          Lorem ipsum dolor sit, amet consectetur adipisicing elit. Aspernatur
+          vitae enim quis nostrum unde eaque eum, veniam quibusdam a. Totam
+          fugit soluta porro illo facilis consequatur tempora at minus
+          perspiciatis.
+        </p>
+        <div class="btn-2">
+          <button class="project-btn"><a href="#">Project 4</a></button>
+        </div>
+      </div>
+    </section>
     <footer>
       <div class="bot-links">
         <a href="#"><i class="bx bxl-linkedin"></i></a>
