--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     />
     <title>Personal Portfolio</title>
   </head>
-  <body>
+  <body class="about-page">
     <header class="header">
       <a href="index.html" class="name">Chris</a>
 
@@ -66,5 +66,6 @@
         <a href="https://github.com/"><i class="bx bxl-github"></i></a>
       </div>
     </footer>
+    <script src="javascript.js"></script>
   </body>
 </html>
