finished the contact page

--- a/contact.html
+++ b/contact.html
@@ -27,6 +27,31 @@
         <a href="contact.html">Contact</a>
       </nav>
     </header>
+    <div class="contact-title">
+      <h1>Email me and lets connect!</h1>
+    </div>
+    <body>
+      <div class="contact">
+        <div class="coding-1">
+          <img src="Image/Coding-1.webp" alt="coding-1" />
+        </div>
+        <form action="" class="contact-form">
+          <input type="text" placeholder="Name" class="name-input" />
+          <input type="email" placeholder="Email" class="email-inputa" />
+          <textarea
+            name="Email-input"
+            class="email-input"
+            cols="30"
+            rows="10"
+            placeholder="Text Here"
+          ></textarea>
+          <input type="button" value="Send" class="send-input" />
+        </form>
+        <div class="coding-2">
+          <img src="Image/coding-2.jpeg" alt="coding-2" />
+        </div>
+      </div>
+    </body>
     <footer>
       <div class="bot-links">
         <a href="https://www.linkedin.com"> <i class="bx bxl-linkedin"></i></a>
