--- a/index.html
+++ b/index.html
@@ -42,7 +42,13 @@
         </p>
         <div class="btn">
           <button class="pill" type="button">Resume</button>
-          <button class="pill" type="button">Contact</button>
+          <button
+            class="pill"
+            type="button"
+            onclick="location.href='contact.html'"
+          >
+            Contact
+          </button>
         </div>
       </div>
       <div>
